@@ -4,9 +4,9 @@
  ((name        aws_s3)
   (public_name aws-s3)
   (synopsis "Amazon S3 access library")
-  (libraries (core oUnit cohttp inifiles cryptokit nocrypto yojson
-              ppx_protocol_conv ppx_protocol_conv.runtime ppx_protocol_conv.json
-              ppx_protocol_conv.xml xml-light str))
+  (libraries (core oUnit cohttp inifiles digestif.c yojson
+              ppx_protocol_conv.runtime ppx_protocol_conv_json
+              ppx_protocol_conv_xml_light xml-light str))
   (preprocess (pps (ppx_protocol_conv ppx_driver.runner)))
  )
 )
